i18n support added. Closes #28

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,6 +3,7 @@
         "USERNAME": "Username",
         "PASSWORD": "Password",
         "LOGIN_REQUIRED": "Username is required",
-        "PASSWORD_REQUIRED": "Password is required"
+        "PASSWORD_REQUIRED": "Password is required",
+        "LOGIN_BUTTON": "Login"
     }
 }
