--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -5,5 +5,16 @@
         "LOGIN_REQUIRED": "Обязательное поле Пользователь",
         "PASSWORD_REQUIRED": "Обязательное поле Пароль",
         "LOGIN_BUTTON": "Войти"
+    },
+    "HEADER": {
+        "USER_PROFILE": "Профиль пользователя",
+        "LOGOUT": "Выйти"
+    },
+    "SIDEBAR": {
+        "DASHBOARD": "Главная",
+        "PROJECTS": "Проекты",
+        "TESTCASES": "Тест Кейсы",
+        "TEST_EXECUTIONS": "Тест Прогоны",
+        "REPORTS": "Отчеты"
     }
 }
