some styles for login page

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,6 @@
 {
     "LOGINPAGE": {
+        "LOGIN": "Login",
         "USERNAME": "Username",
         "PASSWORD": "Password",
         "LOGIN_REQUIRED": "Username is required",
