router animations added

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,7 @@
 {
+    "SETTINGS": {
+        "CHOOSE_LANGUAGE": "Choose language"
+    },
     "ERROR": {
         "SERVER_ERROR": "Server Error"
     },
