--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,4 +1,7 @@
 {
+    "SETTINGS": {
+        "CHOOSE_LANGUAGE": "Выберите язык"
+    },
     "ERROR": {
         "SERVER_ERROR": "Ошибка Сервера"
     },
