--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,15 +5,6 @@
     "ERROR": {
         "SERVER_ERROR": "Server Error"
     },
-    "LOGINPAGE": {
-        "LOGIN": "Login",
-        "USERNAME": "Username",
-        "PASSWORD": "Password",
-        "LOGIN_REQUIRED": "Username is required",
-        "PASSWORD_REQUIRED": "Password is required",
-        "LOGIN_BUTTON": "Login",
-        "INVALID_CREDENTIALS": "Username or password is incorrect"
-    },
     "HEADER": {
         "USER_PROFILE": "User Profile",
         "LOGOUT": "Logout"
@@ -24,5 +15,22 @@
         "TESTCASES": "Test Сases",
         "TEST_EXECUTIONS": "Test Executions",
         "REPORTS": "Reports"
+    },
+    "LOGINPAGE": {
+        "LOGIN": "Login",
+        "USERNAME": "Username",
+        "PASSWORD": "Password",
+        "LOGIN_REQUIRED": "Username is required",
+        "PASSWORD_REQUIRED": "Password is required",
+        "LOGIN_BUTTON": "Login",
+        "INVALID_CREDENTIALS": "Username or password is incorrect"
+    },
+    "USERPROFILEPAGE": {
+        "REGISTERED": "Registered",
+        "EMAIL": "Email",
+        "PHONE_NUMBER": "Phone Number",
+        "COMPANY": "Company",
+        "WORK_INFORMATION": "Work Information",
+        "PERSONAL_INFORMATION": "Personal Information"
     }
 }
