--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -5,15 +5,6 @@
     "ERROR": {
         "SERVER_ERROR": "Ошибка Сервера"
     },
-    "LOGINPAGE": {
-        "LOGIN": "Вход",
-        "USERNAME": "Пользователь",
-        "PASSWORD": "Пароль",
-        "LOGIN_REQUIRED": "Обязательное поле Пользователь",
-        "PASSWORD_REQUIRED": "Обязательное поле Пароль",
-        "LOGIN_BUTTON": "Войти",
-        "INVALID_CREDENTIALS": "Логин или пароль не верный"
-    },
     "HEADER": {
         "USER_PROFILE": "Профиль пользователя",
         "LOGOUT": "Выйти"
@@ -24,5 +15,22 @@
         "TESTCASES": "Тест Кейсы",
         "TEST_EXECUTIONS": "Тест Прогоны",
         "REPORTS": "Отчеты"
+    },
+    "LOGINPAGE": {
+        "LOGIN": "Вход",
+        "USERNAME": "Пользователь",
+        "PASSWORD": "Пароль",
+        "LOGIN_REQUIRED": "Обязательное поле Пользователь",
+        "PASSWORD_REQUIRED": "Обязательное поле Пароль",
+        "LOGIN_BUTTON": "Войти",
+        "INVALID_CREDENTIALS": "Логин или пароль не верный"
+    },
+    "USERPROFILEPAGE": {
+        "REGISTERED": "Зарегистрирован",
+        "EMAIL": "Email",
+        "PHONE_NUMBER": "Телефонный Номер",
+        "COMPANY": "Компания",
+        "WORK_INFORMATION": "Рабочая Информация",
+        "PERSONAL_INFORMATION": "Персональная Информация"
     }
 }
