feat(ProjectSettings): introduce blank project settings page and routing to that page

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -17,7 +17,8 @@
         "PROJECTS": "Projects",
         "TESTCASES": "Test Сases",
         "TEST_EXECUTIONS": "Test Executions",
-        "REPORTS": "Reports"
+        "REPORTS": "Reports",
+        "PROJECT_SETTINGS": "Project Settings"
     },
     "LOGINPAGE": {
         "LOGIN": "Login",
