feat(Users): introduce user list basic UI

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -18,6 +18,7 @@
         "TESTCASES": "Test Сases",
         "TEST_EXECUTIONS": "Test Executions",
         "REPORTS": "Reports",
+        "USERS": "Users",
         "PROJECT_SETTINGS": "Project Settings"
     },
     "LOGINPAGE": {
