--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -18,6 +18,7 @@
         "TESTCASES": "Тест Кейсы",
         "TEST_EXECUTIONS": "Тест Прогоны",
         "REPORTS": "Отчеты",
+        "USERS": "Пользователи",
         "PROJECT_SETTINGS": "Настройки Проекта"
     },
     "LOGINPAGE": {
