fix(Settings): add language strings for title
Closes #66

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,6 @@
 {
     "SETTINGS": {
+        "TITLE": "Settings",
         "CHOOSE_LANGUAGE": "Choose language",
         "THEME": "Theme",
         "THEME_BRIGHT": "Bright",
