feat(Users): add translation for user create page and better error messages Closes #71

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -51,6 +51,29 @@
         "ACTION": "Action",
         "REMOVE_MEMBER": "Remove member"
     },
+    "USERCREATEPAGE": {
+        "EMAIL": "Email",
+        "EMAIL_PLACEHOLDER": "email@example.com",
+        "EMAIL_REQUIRED": "Email is required",
+        "LASTNAME": "Last name",
+        "LASTNAME_PLACEHOLDER": "Doe",
+        "LASTNAME_REQUIRED": "Last name required",
+        "FIRSTNAME": "First name",
+        "FIRSTNAME_PLACEHOLDER": "John",
+        "FIRSTNAME_REQUIRED": "First name required",
+        "JOBTITLE": "Job title",
+        "JOBTITLE_PLACEHOLDER": "Senior Tester",
+        "JOBTITLE_REQUIRED": "Job title required",
+        "PHONE_NUMBER": "Phone Number",
+        "PHONE_NUMBER_PLACEHOLDER": "+18081234567",
+        "COMPANY": "Company",
+        "COMPANY_PLACEHOLDER": "Example LLC",
+        "PASSWORD": "Password",
+        "PASSWORD_REQUIRED": "Password required",
+        "CONFIRMPASSWORD": "Confirm Password",
+        "CONFIRMPASSWORD_REQUIRED": "Confirm password required",
+        "CREATE_USER": "Create User"
+    },
     "USERPROFILEPAGE": {
         "REGISTERED": "Registered",
         "EMAIL": "Email",
