feat(Testcase): more fields and translations for testcase creation

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -51,6 +51,44 @@
         "ACTION": "Action",
         "REMOVE_MEMBER": "Remove member"
     },
+    "TESTCASE_DETAILSPAGE": {
+        "DESCRIPTION": "Description",
+        "EDIT": "Edit",
+        "DELETE": "Delete",
+        "LAST_EDITED": "Last edited",
+        "STATUS": "Status",
+        "CREATED_BY": "Created by",
+        "UPDATED_BY": "Updated by",
+        "EDIT_MEMBERS": "Edit Members",
+        "NAME": "Name",
+        "ROLE": "Role",
+        "ACTION": "Action",
+        "REMOVE_MEMBER": "Remove member"
+    },
+    "TESTCASECREATEPAGE": {
+        "TITLE": "Title",
+        "TITLE_PLACEHOLDER": "Title",
+        "TITLE_REQUIRED": "Title is required",
+        "DESCRIPTION": "Description",
+        "DESCRIPTION_PLACEHOLDER": "Description",
+        "DESCRIPTION_REQUIRED": "Description required",
+        "PRECONDITIONS": "Preconditions",
+        "PRECONDITIONS_PLACEHOLDER": "Preconditions",
+        "PRECONDITIONS_REQUIRED": "Preconditions required",
+        "STEPS": "Steps",
+        "STEPS_ACTION_PLACEHOLDER": "Action",
+        "STEPS_ACTION_REQUIRED": "Action required",
+        "TESTDATA": "Test Data",
+        "TESTDATA_PLACEHOLDER": "Test Data",
+        "TESTDATA_REQUIRED": "Test Data required",
+        "EXPECTED": "Expected Result",
+        "EXPECTED_PLACEHOLDER": "Expected result",
+        "EXPECTED_REQUIRED": "Expected result required",
+        "POSTCONDITIONS": "Postconditions",
+        "POSTCONDITIONS_PLACEHOLDER": "Postconditions",
+        "POSTCONDITIONS_REQUIRED": "Postconditions required",
+        "CREATE_TESTCASE": "Create Testcase"
+    },
     "USERCREATEPAGE": {
         "EMAIL": "Email",
         "EMAIL_PLACEHOLDER": "email@example.com",
