--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -51,6 +51,44 @@
         "ACTION": "Действие",
         "REMOVE_MEMBER": "Удалить участника"
     },
+    "TESTCASE_DETAILSPAGE": {
+        "DESCRIPTION": "Описание",
+        "EDIT": "Редактировать",
+        "DELETE": "Удалить",
+        "LAST_EDITED": "Последние изменения",
+        "STATUS": "Статус",
+        "CREATED_BY": "Создано",
+        "UPDATED_BY": "Отредактировано",
+        "EDIT_MEMBERS": "Редактировать участников",
+        "NAME": "Имя",
+        "ROLE": "Роль",
+        "ACTION": "Действие",
+        "REMOVE_MEMBER": "Удалить участника"
+    },
+    "TESTCASECREATEPAGE": {
+        "TITLE": "Заголовок",
+        "TITLE_PLACEHOLDER": "Заголовок",
+        "TITLE_REQUIRED": "Заголовок - обязательное поле",
+        "DESCRIPTION": "Описание",
+        "DESCRIPTION_PLACEHOLDER": "Описание",
+        "DESCRIPTION_REQUIRED": "Описание - обязательное поле",
+        "PRECONDITIONS": "Предусловия",
+        "PRECONDITIONS_PLACEHOLDER": "Предусловия",
+        "PRECONDITIONS_REQUIRED": "Предусловия - обязательное поле",
+        "STEPS": "Шаги",
+        "STEPS_ACTION_PLACEHOLDER": "Действие",
+        "STEPS_ACTION_REQUIRED": "Действие - обязательное поле",
+        "TESTDATA": "Тестовые данные",
+        "TESTDATA_PLACEHOLDER": "Тестовые данные",
+        "TESTDATA_REQUIRED": "Тестовые данные - обязательное поле",
+        "EXPECTED": "Ожидаемый Результат",
+        "EXPECTED_PLACEHOLDER": "Ожидаемый результат",
+        "EXPECTED_REQUIRED": "Ожидаемый результат - обязательное поле",
+        "POSTCONDITIONS": "Постусловия",
+        "POSTCONDITIONS_PLACEHOLDER": "Постусловия",
+        "POSTCONDITIONS_REQUIRED": "Постусловия - обязательное поле",
+        "CREATE_TESTCASE": "Создать Тесткейс"
+    },
     "USERCREATEPAGE": {
         "EMAIL": "Email",
         "EMAIL_PLACEHOLDER": "email@example.com",
