fix(User): fix validators for user create
closes #69

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -91,6 +91,7 @@
     },
     "USERCREATEPAGE": {
         "TITLE": "Create User Profile",
+        "SECTION_GENERAL": "General",
         "EMAIL": "Email",
         "EMAIL_PLACEHOLDER": "email@example.com",
         "EMAIL_REQUIRED": "Email is required",
