--- a/i18n/en.json
+++ b/i18n/en.json
@@ -56,6 +56,8 @@
   },
   "TESTMANAGEMENTPAGE": {
     "ADD": "Add",
+    "EDIT": "Edit",
+    "DELETE": "Delete",
     "TITLE": "Title"
   },
   "TESTEXECUTIONPAGE": {
