--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -56,6 +56,8 @@
   },
   "TESTMANAGEMENTPAGE": {
     "ADD": "Добавить",
+    "EDIT": "Редактировать",
+    "DELETE": "Удалить",
     "TITLE": "Название"
   },
   "TESTEXECUTIONPAGE": {
