feat(i18n): remove unused languages and translate languages in select

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,10 +4,12 @@
     "USERS": "Users",
     "INVENTORY": "Inventory"
   },
+  "LANGUAGES": {
+    "en": "English",
+    "ru": "Russian"
+  },
   "MAINSETTINGS": {
     "LANGUAGE": "Language",
-    "RUSSIAN":"Russian",
-    "ENGLISH":"English",
     "THEME": "Theme",
     "THEME_BRIGHT": "Bright",
     "THEME_DARK": "Dark",
