--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -100,7 +100,7 @@
     "DELETE": "Удалить",
     "TITLE": "Название",
     "CANCEL": "Отмена",
-    "SUCCESSFULLY_DELETED": "успешно удалены",
+    "SUCCESSFULLY_DELETED": "успешно удален",
     "MODAL_DELETE_HEADER": "Удалить Тест кейс(ы)",
     "MODAL_DELETE_DESCRIPTION": "Вы уверены, что хотите удалить выбранные тест кейсы? Удаленные тест кейсы не смогут быть восстановлены."
   },
