--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -15,6 +15,13 @@
     "THEME_DARK": "Темная",
     "TITLE": "Настройки"
   },
+  "PRIORITIES": {
+    "BLOCKER": "Блокер",
+    "CRITICAL": "Критичный",
+    "MAJOR": "Мажорный",
+    "MINOR": "Минорный",
+    "TRIVIAL": "Тривиальный"
+  },
   "USERSSETTINGS" : {
     "ADD": "Добавить",
     "EDIT": "Редактировать",
@@ -130,6 +137,7 @@
     "DESCRIPTION": "Описание",
     "DESCRIPTION_PLACEHOLDER": "Описание",
     "DESCRIPTION_REQUIRED": "Описание - обязательное поле",
+    "PRIORITY": "Приоритет",
     "PRECONDITIONS": "Предусловия",
     "PRECONDITIONS_PLACEHOLDER": "Предусловия",
     "PRECONDITIONS_REQUIRED": "Предусловия - обязательное поле",
@@ -145,7 +153,10 @@
     "POSTCONDITIONS": "Постусловия",
     "POSTCONDITIONS_PLACEHOLDER": "Постусловия",
     "POSTCONDITIONS_REQUIRED": "Постусловия - обязательное поле",
-    "CREATE_TESTCASE": "Создать Тесткейс"
+    "CREATE_TESTCASE": "Создать Тест кейс",
+    "EDIT_TESTCASE": "Редактировать Тест кейс",
+    "CREATE_BUTTON": "Создать",
+    "EDIT_BUTTON": "Редактировать"
   },
   "USERCREATEPAGE": {
     "TITLE": "Создать профиль пользователя",
