--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -107,9 +107,16 @@
     "DELETE": "Удалить",
     "TITLE": "Название",
     "CANCEL": "Отмена",
+    "TESTCASE": "Тест Кейс",
+    "TESTSUITE": "Тестовый Набор",
+    "SUCCESSFULLY_CREATED": "успешно создан",
+    "SUCCESSFULLY_UPDATED": "успешно обновлен",
     "SUCCESSFULLY_DELETED": "успешно удален",
     "MODAL_DELETE_HEADER": "Удалить Тест кейс(ы)",
-    "MODAL_DELETE_DESCRIPTION": "Вы уверены, что хотите удалить выбранные тест кейсы? Удаленные тест кейсы не смогут быть восстановлены."
+    "MODAL_DELETE_DESCRIPTION": "Вы уверены, что хотите удалить выбранные тест кейсы? Удаленные тест кейсы не смогут быть восстановлены.",
+    "EMPTYSTATE_NOTESTSUITES_TITLE": "У вас нет ни одного Тестового Набора.",
+    "EMPTYSTATE_NOTESTSUITES_DESCRIPTION": "Нажмите на кнопку 'Создать Тестовый Набор' для создания",
+    "EMPTYSTATE_CREATETESTSUITE_BUTTON": "Создать Тестовый Набор"
   },
   "TESTEXECUTIONPAGE": {
     "ADD": "Добавить",
