--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -47,6 +47,7 @@
     "EDIT": "Редактировать",
     "DELETE": "Удалить",
     "ROLE": "Роль",
+    "DESCRIPTION": "Описание",
     "ROLES": "ролей",
     "ROLES_TAB": "Роли",
     "CANCEL": "Отмена"
@@ -90,6 +91,7 @@
     "LOGIN_BUTTON": "Войти",
     "REGISTER_BUTTON": "Зарегистрироваться",
     "INVALID_CREDENTIALS": "Логин или пароль не верный",
+    "USER_NOT_ACTIVATED": "Пользователь не активирован",
     "REMEMBER_ME": "Запомнить меня",
     "FORGOT_PASSWORD": "Восстановить пароль"
   },
@@ -199,10 +201,14 @@
     "CONFIRMPASSWORD": "Повторить пароль",
     "CONFIRMPASSWORD_REQUIRED": "Повторить пароль - обязательное поле",
     "PASSWORDSMATCH": "Оба пароля должны быть одинаковы",
+    "ACTIVE": "Активирован",
+    "ROLE": "Роль",
     "CREATE_USER": "Создать Пользователя",
     "SECTION_ADDITIONAL": "Дополнительная Информация",
     "MODAL_DELETE_HEADER": "Удалить Пользователя(ей)",
-    "MODAL_DELETE_DESCRIPTION": "Вы уверены, что хотите удалить выбранных пользователей? Удаленные пользователи не смогут быть восстановлены."
+    "MODAL_DELETE_DESCRIPTION": "Вы уверены, что хотите удалить выбранных пользователей? Удаленные пользователи не смогут быть восстановлены.",
+    "ADMIN_CANT_BE_EDITED": "Системный аккаунт не может быть изменён",
+    "ADMIN_CANT_BE_DELETED": "Системный аккаунт не может быть удален"
   },
   "USERPROFILEPAGE": {
     "USER": "Пользователь",
