--- a/i18n/en.json
+++ b/i18n/en.json
@@ -98,7 +98,26 @@
   "PROJECTSPAGE": {
     "CREATE": "Create",
     "VIEW": "View",
-    "EDIT": "Edit"
+    "EDIT": "Edit",
+    "EMPTYSTATE_NOPROJECTS_TITLE": "You have not created Project yet.",
+    "EMPTYSTATE_NOPROJECTS_DESCRIPTION": "Tap the 'Create Project' button to get started",
+    "EMPTYSTATE_CREATEPROJECT_BUTTON": "Create Project"
+  },
+  "PROJECTCREATEPAGE": {
+    "WIZARD_TITLE": "Project Creation Wizard",
+    "PROJECT_DETAILS": "Project Details",
+    "NAME": "Name",
+    "DESCRIPTION": "Description",
+    "EDIT": "Edit",
+    "DELETE": "Delete",
+    "LAST_EDITED": "Last edited",
+    "STATUS": "Status",
+    "CREATED_BY": "Created by",
+    "UPDATED_BY": "Updated by",
+    "EDIT_MEMBERS": "Edit Members",
+    "ROLE": "Role",
+    "ACTION": "Action",
+    "REMOVE_MEMBER": "Remove member"
   },
   "PROJECT_DETAILSPAGE": {
     "DESCRIPTION": "Description",
